fixed navbar overflow

--- a/src/scss/service-partial.scss
+++ b/src/scss/service-partial.scss
@@ -3,6 +3,7 @@
 html, body {
     background-color: #151515;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 p {
